add spring security in application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+jwt.public.key=classpath:publickey.crt
+jwt.private.key=classpath:privatekey.pem
+
 spring.application.name=api-authentication
 
 spring.jpa.database=POSTGRESQL
