configuration of AuthController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-jwt.public.key=classpath:publickey.crt
-jwt.private.key=classpath:privatekey.pem
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
 
 spring.application.name=api-authentication
 
