adding swagger documentation of api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.generate-ddl=true
 
 spring.flyway.user=${POSTGRES_USERNAME}
 spring.flyway.password=${POSTGRES_PASSWORD}
+
+
+server.port=8080
+
+
+
+
