--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,25 @@ jwt.private.key=classpath:app.key
 spring.application.name=api-authentication
 
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/apiauthentication
+spring.datasource.username=postgres
+spring.datasource.password=123
+
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
-spring.flyway.user=${POSTGRES_USERNAME}
-spring.flyway.password=${POSTGRES_PASSWORD}
+spring.flyway.user=postgres
+spring.flyway.password=123
+spring.flyway.url= jdbc:postgresql://localhost:5432/apiauthentication
+spring.flyway.locations= classpath:db/migration
+spring.flyway.enabled: true
+
+springdoc.api-docs.path= /docs
+springdoc.swagger-ui.path=/swagger-docs
+springdoc.swagger-ui.tags-sorter= alpha
+springdoc.swagger-ui.operations-sorter= method
+
 
 
 server.port=8080
