--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ jwt.private.key=classpath:app.key
 spring.application.name=api-authentication
 
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://172.17.0.1:5432/apiauthentication
+spring.datasource.url=jdbc:postgresql://localhost:5432/apiauthentication
 spring.datasource.username=postgres
 spring.datasource.password=123
 
@@ -14,7 +14,7 @@ spring.jpa.generate-ddl=true
 
 spring.flyway.user=postgres
 spring.flyway.password=123
-spring.flyway.url= jdbc:postgresql://172.17.0.1:5432/apiauthentication
+spring.flyway.url= jdbc:postgresql://localhost:5432/apiauthentication
 spring.flyway.locations= classpath:db/migration
 spring.flyway.enabled: true
 
