--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.flyway.locations= classpath:db/migration
 spring.flyway.enabled: true
 
 # Configuração para o Springdoc OpenAPI
-springdoc.api-docs.path=/docs            # Caminho para a documentação da API
+springdoc.api-docs.path=/v3/api-docs/**   # Caminho para a documentação da API
 springdoc.swagger-ui.path=/swagger-docs  # Caminho para o Swagger UI
 springdoc.swagger-ui.tags-sorter=alpha   # Ordenação alfabética das tags no Swagger UI
 springdoc.swagger-ui.operations-sorter=method  # Ordenação das operações no Swagger UI
