--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,20 +18,10 @@ spring.flyway.url= jdbc:postgresql://localhost:5432/apiauthentication
 spring.flyway.locations= classpath:db/migration
 spring.flyway.enabled: true
 
-# Configuração para o Springdoc OpenAPI
-springdoc.api-docs.path=/v3/api-docs/**   # Caminho para a documentação da API
-springdoc.swagger-ui.path=/swagger-docs  # Caminho para o Swagger UI
-springdoc.swagger-ui.tags-sorter=alpha   # Ordenação alfabética das tags no Swagger UI
-springdoc.swagger-ui.operations-sorter=method  # Ordenação das operações no Swagger UI
-
-# Regras de permissão para determinados endpoints
-spring.security.filter.dispatcher-types.error=permitAll  # Permitir acesso a endpoints de erro
-spring.security.filter.dispatcher-request-matcher.auth-whitelist=permitAll  # Permitir acesso a endpoints na lista branca de autenticação
-spring.security.filter.dispatcher-request-matcher.auth-whitelist.urls[0]=/api/v1/auth/**  # URL na lista branca
-spring.security.filter.dispatcher-request-matcher.auth-whitelist.urls[1]=/v3/api-docs/**
-spring.security.filter.dispatcher-request-matcher.auth-whitelist.urls[2]=/v3/api-docs.yaml
-spring.security.filter.dispatcher-request-matcher.auth-whitelist.urls[3]=/swagger-ui/**
-spring.security.filter.dispatcher-request-matcher.auth-whitelist.urls[4]=/swagger-ui.html
+springdoc.api-docs.path= /v3/api-docs/
+springdoc.swagger-ui.path=/swagger-docs
+springdoc.swagger-ui.tags-sorter= alpha
+springdoc.swagger-ui.operations-sorter= method
 
 
 
