config path openApi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,10 @@ spring.flyway.url= jdbc:postgresql://localhost:5432/apiauthentication
 spring.flyway.locations= classpath:db/migration
 spring.flyway.enabled: true
 
-springdoc.api-docs.path= /v3/api-docs/
-springdoc.swagger-ui.path=/swagger-docs
-springdoc.swagger-ui.tags-sorter= alpha
-springdoc.swagger-ui.operations-sorter= method
 
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
 
 
 server.port=8080
