adding messaging with kafka ps:It is connected but the message is not arriving in the Quarkus application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,19 +12,22 @@ spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
-spring.flyway.user=postgres
-spring.flyway.password=123
-spring.flyway.url= jdbc:postgresql://localhost:5432/apiauthentication
-spring.flyway.locations= classpath:db/migration
-spring.flyway.enabled: true
-
+#spring.flyway.user=postgres
+#spring.flyway.password=123
+#spring.flyway.url= jdbc:postgresql://172.17.0.1:5432/apiauthentication
+#spring.flyway.locations= classpath:db/migration
+#spring.flyway.enabled: true
 
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 
 
+
 server.port=8080
+
+spring.kafka.bootstrap-servers=localhost:9090
+spring.pulsar.producer.topic-name=user-connect
 
 
 
