--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/apiauthentication
 spring.datasource.username=postgres
 spring.datasource.password=123
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb://172.17.0.2:27017/planner
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=planner
+spring.data.mongodb.password=123
+spring.data.mongodb.username=admin
+
+
+# Caso você tenha um usuário e senha, adicione as linhas abaixo:
+# spring.data.mongodb.username=seu_usuario
+# spring.data.mongodb.password=sua_senha
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
@@ -26,8 +37,8 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 server.port=8080
 
-spring.kafka.bootstrap-servers=localhost:9090
-spring.pulsar.producer.topic-name=user-connect
+#spring.kafka.bootstrap-servers=localhost:9090
+#spring.pulsar.producer.topic-name=user-connect
 
 
 
